group = 'cordelia'
version = '2.0.RELEASE'

apply plugin: 'java'
apply plugin: 'maven'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    withSourcesJar()
}

repositories {
    jcenter()
    maven {
        url "${nexusUrl}/repository/maven-public/"
    }
}

dependencies {
    implementation 'com.konghq:unirest-java:3.11.05'
    implementation 'com.konghq:unirest-objectmapper-jackson:3.11.05'
    implementation 'ch.qos.logback:logback-classic:1.2.3'

    compileOnly 'org.projectlombok:lombok:1.18.16'
    annotationProcessor 'org.projectlombok:lombok:1.18.16'

    testCompileOnly 'org.projectlombok:lombok:1.18.16'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'

    testImplementation('junit:junit:4.12')
}

uploadArchives {
    repositories {
        mavenDeployer {
            repository(url: "${nexusUrl}/repository/maven-releases") {
                authentication(userName: nexusUsername, password: nexusPassword)
            }
            snapshotRepository(url: "${nexusUrl}/repository/maven-snapshots") {
                authentication(userName: nexusUsername, password: nexusPassword)
            }
        }
    }
}